kubernetes/cloudflare-tunnel/monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflare-metrics
  namespace: cloudflare
  labels:
    app: cloudflared
    tunnel-name: k3s-traefik
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 2000
      targetPort: metrics # From deployment
      protocol: TCP
  selector:
    pod: cloudflared
